--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.3.4",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.7",
     "autoprefixer": "^10.4.8",
+    "axios": "^0.27.2",
+    "framer-motion": "^6.5.1",
     "next": "12.2.5",
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.0.8",
+    "styled-components": "^5.3.6",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
