--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "check-format": "prettier --check .",
+    "format": "prettier --write .",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.3.4",
@@ -16,8 +19,10 @@
     "autoprefixer": "^10.4.8",
     "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
+    "lint-staged": "^13.0.3",
     "next": "12.2.5",
     "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.0.8",
@@ -30,6 +35,15 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
+    "husky": "^8.0.0",
     "typescript": "4.8.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js, jsx}": "prettier --write"
   }
 }
