--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "react-toastify": "^9.0.8",
     "styled-components": "^5.3.6",
     "tailwindcss": "^3.1.8"
@@ -35,6 +36,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
+    "feather-icons": "^4.29.0",
     "husky": "^8.0.0",
     "typescript": "4.8.2"
   },
