--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "autoprefixer": "^10.4.8",
     "next": "12.2.5",
+    "next-themes": "^0.2.1",
+    "phosphor-react": "^1.4.1",
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
