--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "framer-motion": "^6.5.1",
     "lint-staged": "^13.0.3",
     "next": "12.2.5",
+    "next-themes": "^0.2.1",
+    "phosphor-react": "^1.4.1",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "react": "18.2.0",
