--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.7",
+    "@prisma/client": "4.6.1",
     "autoprefixer": "^10.4.8",
     "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
@@ -41,6 +42,7 @@
     "eslint-config-next": "12.2.5",
     "feather-icons": "^4.29.0",
     "husky": "^8.0.0",
+    "prisma": "^4.6.1",
     "typescript": "4.8.2"
   },
   "husky": {
