--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^6.5.1",
     "lint-staged": "^13.0.3",
     "next": "12.2.5",
+    "next-auth": "^4.16.4",
     "next-themes": "^0.2.1",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
